Refactor code structure for improved readability and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,33 @@
 <html lang="pt-br">
 
 <head>
-<meta charset="UTF-8"/>
-<title>iMotos</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <title>iMotos</title>
 </head>
 
 <body>
-<h1>Primeiro texto teste em desenvolvimento usando Texmux e seu editor nano.</h1>
+
+    <header>
+        <div class="topo">
+            <img src="assets/img/logo.png" class="logo" alt="Logo da iMotos" />
+            <form class="barraDePesquisa">
+                <input type="text" class="estiloBarra" id="pesquisa" name="pesquisa" placeholder="Digite a marca ou modelo da moto..." title="" />
+            </form>
+        </div>
+    </header>
+
+    <div class="home">
+        <div class="mensagemBoasVindas">
+            <h1>Bem-vindo à iMotos</h1>
+            <p>Explore o universo iMotos! Aqui, cada modelo tem sua história, especificações completas e curiosidades que só quem é
+            apaixonado entende. Busque pela marca ou modelo e mergulhe no conhecimento.
+            </p>
+        </div>
+        <div class="imagemHome">
+            <img src="" />
+
 </body>
 
 <html>
